--- a/pom.xml
+++ b/pom.xml
@@ -24,41 +24,85 @@ either express or implied.
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
   </properties>
+  <profiles>
+     <profile>
+        <id>HDP</id>
+        <build>
+          <plugins>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                   <execution>
+                     <id>make-hdp</id>
+                     <phase>package</phase>
+                     <goals>
+                       <goal>single</goal>
+                     </goals>
+                     <configuration>
+                       <finalName>${project.name}-HDP-${project.version}</finalName>
+                       <descriptors>
+                         <descriptor>src/main/assembly/assembly-hdp.xml</descriptor>
+                       </descriptors>
+                       <appendAssemblyId>false</appendAssemblyId>
+                     </configuration>
+                   </execution>
+                </executions>
+             </plugin>
+          </plugins>
+        </build>
+     </profile>
+     <profile>
+        <id>CDH</id>
+        <build>
+          <plugins>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                   <execution>
+                     <id>make-cdh</id>
+                     <phase>package</phase>
+                     <goals>
+                       <goal>single</goal>
+                     </goals>
+                     <configuration>
+                       <finalName>${project.name}-CDH-${project.version}</finalName>
+                       <descriptors>
+                         <descriptor>src/main/assembly/assembly-cdh.xml</descriptor>
+                       </descriptors>
+                       <appendAssemblyId>false</appendAssemblyId>
+                     </configuration>
+                   </execution>
+                </executions>
+             </plugin>
+          </plugins>
+        </build>
+     </profile>
+  </profiles>    
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
-		   <version>2.3</version>
-           <executions>
-                 <execution>
-                    <id>make-cdh</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-					<configuration>
-						<finalName>${project.name}-cdh-${project.version}</finalName>
-						<descriptors>
-							<descriptor>src/main/assembly/assembly-cdh.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>false</appendAssemblyId>
-					</configuration>
-                 </execution>
-                 <execution>
-                    <id>make-kafkazk</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-					<configuration>
-						<finalName>${project.name}-general-${project.version}</finalName>
-						<descriptors>
-							<descriptor>src/main/assembly/assembly-general.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>false</appendAssemblyId>
-					</configuration>
-                 </execution>
+		       <version>2.3</version>
+             <executions>
+              <execution>
+                <id>make-general</id>
+                <phase>package</phase>
+                <goals>
+                    <goal>single</goal>
+                </goals>
+                <configuration>
+                  <finalName>${project.name}-general-${project.version}</finalName>
+                  <descriptors>
+                    <descriptor>src/main/assembly/assembly-general.xml</descriptor>
+                  </descriptors>
+                  <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+              </execution>
             </executions>
         </plugin>
      </plugins>
